--- a/index.html
+++ b/index.html
@@ -5,57 +5,118 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Time Widget</title>
   <style>
+    :root{
+      /* 🔧 할 일 위젯과 같은 높이로 맞춰주세요 */
+      --widget-height: 500px;
+    }
     * { box-sizing: border-box; }
     body {
-      margin: 0; padding: 20px;
+      margin: 0;
+      padding: 20px;
       font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, sans-serif;
-      background: #ffffff; display: flex; justify-content: center; align-items: center; min-height: 100vh;
+      background: #ffffff;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      min-height: 100vh;
     }
-    .widget {
-      background: white; border-radius: 40px; padding: 32px 28px;
-      box-shadow: 0 8px 32px rgba(0,0,0,0.06); width: 100%; max-width: 300px;
-      border: 1px solid rgba(0,0,0,0.04);
-    }
-    .header { text-align: center; margin-bottom: 24px; }
-    .title { font-size: 1.75rem; font-weight: 700; color: #1a1a1a; margin-bottom: 8px; letter-spacing: -0.02em; }
-    .date { font-size: .95rem; color: #999; font-weight: 500; }
 
-    .clock-container { display: flex; justify-content: center; align-items: center; position: relative; width: 200px; height: 200px; margin: 0 auto; }
-    .clock { position: relative; width: 200px; height: 200px; border-radius: 50%; background: white; }
+    .widget {
+      background: white;
+      border-radius: 32px;
+      padding: 32px 28px;
+      box-shadow: 0 8px 32px rgba(0,0,0,0.06);
+      width: 100%;
+      max-width: 500px;             /* 할 일 위젯과 동일 */
+      border: 1px solid rgba(0,0,0,0.04);
+      height: var(--widget-height); /* 🔹 세로 길이 동일화 */
+      display: flex;
+      flex-direction: column;
+    }
+
+    .header {
+      text-align: center;
+      margin-bottom: 24px;
+    }
+
+    .title {
+      font-size: 1.75rem;
+      font-weight: 700;
+      color: #1a1a1a;
+      margin-bottom: 8px;
+      letter-spacing: -0.02em;
+    }
+
+    .date {
+      font-size: 1rem;
+      color: #999;
+      font-weight: 400;
+    }
+
+    .clock-container {
+      flex: 1;                      /* 남는 공간 채움 */
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      position: relative;
+      min-height: 0;                /* flex overflow 방지 */
+    }
+
+    .clock {
+      position: relative;
+      border-radius: 50%;
+      background: white;
+      /* 크기는 JS로 동적으로 지정됨 */
+    }
 
     /* 큰 숫자 (12/3/6/9) */
     .clock-number {
-      position: absolute; font-size: 1.15rem; font-weight: 700; color: #1a1a1a;
+      position: absolute;
+      font-weight: 700;
+      color: #1a1a1a;
       transform: translate(-50%, -50%);
+      user-select: none;
+      pointer-events: none;
     }
-    .number-12 { top: 18px; left: 50%; }
-    .number-3  { top: 50%; left: 182px; transform: translate(-50%,-50%); }
-    .number-6  { top: 182px; left: 50%; }
-    .number-9  { top: 50%; left: 18px; }
 
     /* 작은 숫자 (1,2,4,5,7,8,10,11) */
     .minor-number {
-      position: absolute; font-size: .8rem; font-weight: 500; color: #333;
+      position: absolute;
+      font-weight: 500;
+      color: #333;
       transform: translate(-50%, -50%);
+      user-select: none;
+      pointer-events: none;
     }
 
     /* 중심점: 맨 앞 + 흰색 외곽선 */
     .clock-center {
-      position: absolute; top: 50%; left: 50%;
-      width: 18px; height: 18px; background: #000cfe;
-      border: 4px solid #ffffff; border-radius: 50%;
-      transform: translate(-50%, -50%); z-index: 999;
+      position: absolute;
+      top: 50%;
+      left: 50%;
+      background: #000cfe;          /* 블루 내부 */
+      border: 4px solid #ffffff;    /* 흰색 외곽선 */
+      border-radius: 50%;
+      transform: translate(-50%, -50%);
+      z-index: 999;                  /* 바늘들보다 위 */
       box-shadow: 0 0 0 1px rgba(0,0,0,0.1);
+      /* 크기는 JS로 동적으로 지정됨 */
     }
 
-    /* 바늘: 중앙 고정, 아래끝 회전축 */
+    /* 바늘 공통: 중앙 고정, 아래끝 회전축 */
     .hand {
-      position: absolute; top: 50%; left: 50%;
-      transform-origin: 50% 100%; border-radius: 999px; z-index: 10;
+      position: absolute;
+      top: 50%;
+      left: 50%;
+      transform-origin: 50% 100%;
+      border-radius: 999px;
+      z-index: 10;
+      /* width/height는 JS에서 크기에 맞춰 설정 */
     }
-    .hour-hand   { width: 10px; height: 62px; background: #1a1a1a; z-index: 12; }
-    .minute-hand { width: 8px;  height: 66px; background: #1a1a1a; z-index: 13; }
-    .second-hand { width: 4px;  height: 88px; background: #000cfe; z-index: 11; }
+
+    .hour-hand   { background: #1a1a1a; z-index: 12; } /* 블랙 */
+    .minute-hand { background: #1a1a1a; z-index: 13; } /* 블랙 (요청대로 길이 짧게) */
+    .second-hand { background: #000cfe; z-index: 11; } /* 블루 */
   </style>
 </head>
 <body>
@@ -65,45 +126,36 @@
       <div class="date" id="todayDate"></div>
     </div>
 
-    <div class="clock-container">
+    <div class="clock-container" id="clockContainer">
       <div class="clock" id="clock">
         <!-- 큰 숫자 -->
-        <div class="clock-number number-12">12</div>
-        <div class="clock-number number-3">3</div>
-        <div class="clock-number number-6">6</div>
-        <div class="clock-number number-9">9</div>
+        <div class="clock-number number-12" id="num12">12</div>
+        <div class="clock-number number-3"  id="num3">3</div>
+        <div class="clock-number number-6"  id="num6">6</div>
+        <div class="clock-number number-9"  id="num9">9</div>
 
         <!-- 바늘 -->
-        <div class="hand hour-hand" id="hourHand"></div>
+        <div class="hand hour-hand"   id="hourHand"></div>
         <div class="hand minute-hand" id="minuteHand"></div>
         <div class="hand second-hand" id="secondHand"></div>
 
         <!-- 중심점 (맨 앞) -->
-        <div class="clock-center"></div>
+        <div class="clock-center" id="clockCenter"></div>
       </div>
     </div>
   </div>
 
   <script>
-    // 작은 숫자 1,2,4,5,7,8,10,11 자동 배치
-    (function addMinorNumbers() {
-      const clock = document.getElementById('clock');
-      const center = 100;       // 시계 중심(px)
-      const radius = 82;        // 숫자 반지름
-      const minor = [1,2,4,5,7,8,10,11];
-      minor.forEach(n => {
-        const angle = (n * 30) * Math.PI / 180;
-        const x = center + radius * Math.sin(angle);
-        const y = center - radius * Math.cos(angle);
-        const el = document.createElement('div');
-        el.className = 'minor-number';
-        el.style.left = x + 'px';
-        el.style.top  = y + 'px';
-        el.textContent = n;
-        clock.appendChild(el);
+    // 한국 날짜 표시
+    function updateDate() {
+      const today = new Date();
+      const koreaTime = new Date(today.toLocaleString("en-US", { timeZone: "Asia/Seoul" }));
+      document.getElementById('todayDate').innerText = koreaTime.toLocaleDateString('en-US', {
+        year: 'numeric', month: 'long', day: 'numeric', timeZone: 'Asia/Seoul'
       });
-    })();
+    }
 
+    // 바늘 회전 적용
     function setHand(el, deg) {
       el.style.transform = `translate(-50%, -100%) rotate(${deg}deg)`;
     }
@@ -111,6 +163,7 @@
     function updateClock() {
       const now = new Date();
       const koreaTime = new Date(now.toLocaleString("en-US", { timeZone: "Asia/Seoul" }));
+
       const h = koreaTime.getHours() % 12;
       const m = koreaTime.getMinutes();
       const s = koreaTime.getSeconds();
@@ -124,17 +177,99 @@
       setHand(document.getElementById('secondHand'), secondAngle);
     }
 
-    function updateDate() {
-      const today = new Date();
-      const koreaTime = new Date(today.toLocaleString("en-US", { timeZone: "Asia/Seoul" }));
-      document.getElementById('todayDate').innerText = koreaTime.toLocaleDateString('en-US', {
-        year: 'numeric', month: 'long', day: 'numeric', timeZone: 'Asia/Seoul'
+    // 시계 크기/숫자/바늘 비율 자동 설정
+    function layoutClock() {
+      const container = document.getElementById('clockContainer');
+      const clock      = document.getElementById('clock');
+      const centerDot  = document.getElementById('clockCenter');
+
+      // 컨테이너의 가용 공간 안에서 원의 지름 결정
+      const size = Math.min(container.clientWidth, container.clientHeight);
+      const diameter = Math.max(160, Math.floor(size * 0.9));  // 최소 160px, 여백 포함
+      const radius   = diameter / 2;
+
+      // 시계 원 크기 적용
+      clock.style.width  = `${diameter}px`;
+      clock.style.height = `${diameter}px`;
+
+      // 큰 숫자 폰트/위치
+      const largeFont = Math.round(diameter * 0.10);  // 12/3/6/9
+      const numOffset = Math.round(diameter * 0.11);  // 테두리에서 떨어진 정도
+
+      const n12 = document.getElementById('num12');
+      const n3  = document.getElementById('num3');
+      const n6  = document.getElementById('num6');
+      const n9  = document.getElementById('num9');
+
+      [n12,n3,n6,n9].forEach(el => el.style.fontSize = `${largeFont}px`);
+
+      n12.style.left = `${radius}px`;   n12.style.top  = `${numOffset}px`;
+      n3.style.left  = `${diameter - numOffset}px`; n3.style.top  = `${radius}px`;
+      n6.style.left  = `${radius}px`;   n6.style.top  = `${diameter - numOffset}px`;
+      n9.style.left  = `${numOffset}px`; n9.style.top  = `${radius}px`;
+
+      // 작은 숫자 생성/갱신 (1,2,4,5,7,8,10,11)
+      const existing = clock.querySelectorAll('.minor-number');
+      existing.forEach(e => e.remove());
+      const minorNums = [1,2,4,5,7,8,10,11];
+      const minorFont = Math.round(diameter * 0.06);
+      const minorRadius = radius - Math.max(18, Math.floor(diameter * 0.14)); // 테두리 여백
+
+      minorNums.forEach(n => {
+        const angle = (n * 30) * Math.PI / 180; // 시계방향 각도
+        const x = radius + minorRadius * Math.sin(angle);
+        const y = radius - minorRadius * Math.cos(angle);
+        const el = document.createElement('div');
+        el.className = 'minor-number';
+        el.style.fontSize = `${minorFont}px`;
+        el.style.left = x + 'px';
+        el.style.top  = y + 'px';
+        el.textContent = n;
+        clock.appendChild(el);
       });
+
+      // 중심 원 크기 (요청: 크게 + 흰 외곽선)
+      const dot = Math.round(diameter * 0.09); // 내부 파란 원 지름
+      centerDot.style.width  = `${dot}px`;
+      centerDot.style.height = `${dot}px`;
+      centerDot.style.borderWidth = `${Math.max(3, Math.round(diameter * 0.02))}px`;
+
+      // 바늘 길이/두께 (분침을 더 짧게)
+      const hour   = document.getElementById('hourHand');
+      const minute = document.getElementById('minuteHand');
+      const second = document.getElementById('secondHand');
+
+      // 길이
+      const hourLen   = Math.round(radius * 0.62);
+      const minuteLen = Math.round(radius * 0.55);  // 🔹 짧게
+      const secondLen = Math.round(radius * 0.70);
+
+      hour.style.height   = `${hourLen}px`;
+      minute.style.height = `${minuteLen}px`;
+      second.style.height = `${secondLen}px`;
+
+      // 두께
+      const hourW   = Math.max(8,  Math.round(diameter * 0.05));
+      const minuteW = Math.max(6,  Math.round(diameter * 0.04));
+      const secondW = Math.max(3,  Math.round(diameter * 0.02));
+
+      hour.style.width   = `${hourW}px`;
+      minute.style.width = `${minuteW}px`;
+      second.style.width = `${secondW}px`;
     }
 
+    // 초기화
     updateDate();
+    layoutClock();
     updateClock();
+
+    // 1초마다 시계 업데이트
     setInterval(updateClock, 1000);
+
+    // 리사이즈 대응
+    const ro = new ResizeObserver(() => layoutClock());
+    ro.observe(document.getElementById('clockContainer'));
+    window.addEventListener('orientationchange', layoutClock);
   </script>
 </body>
 </html>
