--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <title>Time Widget</title>
   <style>
     :root{
-      /* 🔧 할 일 위젯과 같은 높이로 맞춰주세요 */
+      /* 할 일 위젯과 동일한 높이 */
       --widget-height: 500px;
     }
     * { box-sizing: border-box; }
@@ -14,7 +14,7 @@
       margin: 0;
       padding: 20px;
       font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, sans-serif;
-      background: #ffffff;
+      background: transparent;
       display: flex;
       justify-content: center;
       align-items: center;
@@ -22,14 +22,14 @@
     }
 
     .widget {
-      background: white;
+      background: transparent; /* 🔹 배경 투명 */
       border-radius: 32px;
       padding: 32px 28px;
-      box-shadow: 0 8px 32px rgba(0,0,0,0.06);
+      box-shadow: 0 8px 32px rgba(0,0,0,0.06); /* 그림자 유지 */
       width: 100%;
-      max-width: 500px;             /* 할 일 위젯과 동일 */
-      border: 1px solid rgba(0,0,0,0.04);
-      height: var(--widget-height); /* 🔹 세로 길이 동일화 */
+      max-width: 500px;
+      border: 1px solid rgba(0,0,0,0.04); /* 테두리 유지 */
+      height: var(--widget-height);
       display: flex;
       flex-direction: column;
     }
@@ -54,22 +54,21 @@
     }
 
     .clock-container {
-      flex: 1;                      /* 남는 공간 채움 */
+      flex: 1;
       display: flex;
       justify-content: center;
       align-items: center;
       position: relative;
-      min-height: 0;                /* flex overflow 방지 */
+      min-height: 0;
     }
 
     .clock {
       position: relative;
       border-radius: 50%;
-      background: white;
-      /* 크기는 JS로 동적으로 지정됨 */
+      background: transparent; /* 🔹 시계판 배경 투명 */
     }
 
-    /* 큰 숫자 (12/3/6/9) */
+    /* 큰 숫자 */
     .clock-number {
       position: absolute;
       font-weight: 700;
@@ -79,7 +78,7 @@
       pointer-events: none;
     }
 
-    /* 작은 숫자 (1,2,4,5,7,8,10,11) */
+    /* 작은 숫자 */
     .minor-number {
       position: absolute;
       font-weight: 500;
@@ -89,21 +88,20 @@
       pointer-events: none;
     }
 
-    /* 중심점: 맨 앞 + 흰색 외곽선 */
+    /* 중심점 */
     .clock-center {
       position: absolute;
       top: 50%;
       left: 50%;
-      background: #000cfe;          /* 블루 내부 */
-      border: 4px solid #ffffff;    /* 흰색 외곽선 */
+      background: #000cfe;
+      border: 4px solid #ffffff;
       border-radius: 50%;
       transform: translate(-50%, -50%);
-      z-index: 999;                  /* 바늘들보다 위 */
+      z-index: 999;
       box-shadow: 0 0 0 1px rgba(0,0,0,0.1);
-      /* 크기는 JS로 동적으로 지정됨 */
     }
 
-    /* 바늘 공통: 중앙 고정, 아래끝 회전축 */
+    /* 바늘 공통 */
     .hand {
       position: absolute;
       top: 50%;
@@ -111,12 +109,11 @@
       transform-origin: 50% 100%;
       border-radius: 999px;
       z-index: 10;
-      /* width/height는 JS에서 크기에 맞춰 설정 */
     }
 
-    .hour-hand   { background: #1a1a1a; z-index: 12; } /* 블랙 */
-    .minute-hand { background: #1a1a1a; z-index: 13; } /* 블랙 (요청대로 길이 짧게) */
-    .second-hand { background: #000cfe; z-index: 11; } /* 블루 */
+    .hour-hand   { background: #1a1a1a; z-index: 12; }
+    .minute-hand { background: #1a1a1a; z-index: 13; }
+    .second-hand { background: #000cfe; z-index: 11; }
   </style>
 </head>
 <body>
@@ -128,25 +125,21 @@
 
     <div class="clock-container" id="clockContainer">
       <div class="clock" id="clock">
-        <!-- 큰 숫자 -->
         <div class="clock-number number-12" id="num12">12</div>
         <div class="clock-number number-3"  id="num3">3</div>
         <div class="clock-number number-6"  id="num6">6</div>
         <div class="clock-number number-9"  id="num9">9</div>
 
-        <!-- 바늘 -->
         <div class="hand hour-hand"   id="hourHand"></div>
         <div class="hand minute-hand" id="minuteHand"></div>
         <div class="hand second-hand" id="secondHand"></div>
 
-        <!-- 중심점 (맨 앞) -->
         <div class="clock-center" id="clockCenter"></div>
       </div>
     </div>
   </div>
 
   <script>
-    // 한국 날짜 표시
     function updateDate() {
       const today = new Date();
       const koreaTime = new Date(today.toLocaleString("en-US", { timeZone: "Asia/Seoul" }));
@@ -155,7 +148,6 @@
       });
     }
 
-    // 바늘 회전 적용
     function setHand(el, deg) {
       el.style.transform = `translate(-50%, -100%) rotate(${deg}deg)`;
     }
@@ -177,24 +169,20 @@
       setHand(document.getElementById('secondHand'), secondAngle);
     }
 
-    // 시계 크기/숫자/바늘 비율 자동 설정
     function layoutClock() {
       const container = document.getElementById('clockContainer');
       const clock      = document.getElementById('clock');
       const centerDot  = document.getElementById('clockCenter');
 
-      // 컨테이너의 가용 공간 안에서 원의 지름 결정
       const size = Math.min(container.clientWidth, container.clientHeight);
-      const diameter = Math.max(160, Math.floor(size * 0.9));  // 최소 160px, 여백 포함
+      const diameter = Math.max(160, Math.floor(size * 0.9));
       const radius   = diameter / 2;
 
-      // 시계 원 크기 적용
       clock.style.width  = `${diameter}px`;
       clock.style.height = `${diameter}px`;
 
-      // 큰 숫자 폰트/위치
-      const largeFont = Math.round(diameter * 0.10);  // 12/3/6/9
-      const numOffset = Math.round(diameter * 0.11);  // 테두리에서 떨어진 정도
+      const largeFont = Math.round(diameter * 0.10);
+      const numOffset = Math.round(diameter * 0.11);
 
       const n12 = document.getElementById('num12');
       const n3  = document.getElementById('num3');
@@ -208,15 +196,14 @@
       n6.style.left  = `${radius}px`;   n6.style.top  = `${diameter - numOffset}px`;
       n9.style.left  = `${numOffset}px`; n9.style.top  = `${radius}px`;
 
-      // 작은 숫자 생성/갱신 (1,2,4,5,7,8,10,11)
       const existing = clock.querySelectorAll('.minor-number');
       existing.forEach(e => e.remove());
       const minorNums = [1,2,4,5,7,8,10,11];
       const minorFont = Math.round(diameter * 0.06);
-      const minorRadius = radius - Math.max(18, Math.floor(diameter * 0.14)); // 테두리 여백
+      const minorRadius = radius - Math.max(18, Math.floor(diameter * 0.14));
 
       minorNums.forEach(n => {
-        const angle = (n * 30) * Math.PI / 180; // 시계방향 각도
+        const angle = (n * 30) * Math.PI / 180;
         const x = radius + minorRadius * Math.sin(angle);
         const y = radius - minorRadius * Math.cos(angle);
         const el = document.createElement('div');
@@ -228,27 +215,23 @@
         clock.appendChild(el);
       });
 
-      // 중심 원 크기 (요청: 크게 + 흰 외곽선)
-      const dot = Math.round(diameter * 0.09); // 내부 파란 원 지름
+      const dot = Math.round(diameter * 0.09);
       centerDot.style.width  = `${dot}px`;
       centerDot.style.height = `${dot}px`;
       centerDot.style.borderWidth = `${Math.max(3, Math.round(diameter * 0.02))}px`;
 
-      // 바늘 길이/두께 (분침을 더 짧게)
       const hour   = document.getElementById('hourHand');
       const minute = document.getElementById('minuteHand');
       const second = document.getElementById('secondHand');
 
-      // 길이
       const hourLen   = Math.round(radius * 0.62);
-      const minuteLen = Math.round(radius * 0.55);  // 🔹 짧게
+      const minuteLen = Math.round(radius * 0.55);
       const secondLen = Math.round(radius * 0.70);
 
       hour.style.height   = `${hourLen}px`;
       minute.style.height = `${minuteLen}px`;
       second.style.height = `${secondLen}px`;
 
-      // 두께
       const hourW   = Math.max(8,  Math.round(diameter * 0.05));
       const minuteW = Math.max(6,  Math.round(diameter * 0.04));
       const secondW = Math.max(3,  Math.round(diameter * 0.02));
@@ -258,15 +241,12 @@
       second.style.width = `${secondW}px`;
     }
 
-    // 초기화
     updateDate();
     layoutClock();
     updateClock();
 
-    // 1초마다 시계 업데이트
     setInterval(updateClock, 1000);
 
-    // 리사이즈 대응
     const ro = new ResizeObserver(() => layoutClock());
     ro.observe(document.getElementById('clockContainer'));
     window.addEventListener('orientationchange', layoutClock);
