--- a/index.html
+++ b/index.html
@@ -5,136 +5,100 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Time Widget</title>
   <style>
-    :root{
-      /* 할 일 위젯과 동일한 높이 */
-      --widget-height: 500px;
-    }
+    :root { --widget-height: 500px; }
+
     * { box-sizing: border-box; }
     body {
       margin: 0;
       padding: 20px;
-      font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, sans-serif;
+      font-family: sans-serif;         /* 🔹 저작권 문제 없는 기본 서체 */
       background: transparent;
-      display: flex;
-      justify-content: center;
-      align-items: center;
+      display: flex; justify-content: center; align-items: center;
       min-height: 100vh;
     }
 
+    /* 바깥 위젯: 배경 투명, 테두리/그림자 유지 */
     .widget {
-      background: transparent; /* 🔹 배경 투명 */
+      background: transparent;         /* 🔹 투명 */
+      border-radius: 32px;
+      padding: 0;                       /* 카드가 내부 패딩을 담당 */
+      box-shadow: 0 8px 32px rgba(0,0,0,0.06);
+      width: 100%; max-width: 500px;
+      border: 1px solid rgba(0,0,0,0.04);
+      height: var(--widget-height);
+      display: flex; align-items: stretch;
+    }
+
+    /* 안쪽 카드: 흰색 배경 (다크모드에서도 시계가 또렷) */
+    .card {
+      background: #ffffff;              /* 🔹 내부는 항상 흰색 */
       border-radius: 32px;
       padding: 32px 28px;
-      box-shadow: 0 8px 32px rgba(0,0,0,0.06); /* 그림자 유지 */
-      width: 100%;
-      max-width: 500px;
-      border: 1px solid rgba(0,0,0,0.04); /* 테두리 유지 */
-      height: var(--widget-height);
-      display: flex;
-      flex-direction: column;
+      width: 100%; height: 100%;
+      display: flex; flex-direction: column;
     }
 
-    .header {
-      text-align: center;
-      margin-bottom: 24px;
-    }
-
-    .title {
-      font-size: 1.75rem;
-      font-weight: 700;
-      color: #1a1a1a;
-      margin-bottom: 8px;
-      letter-spacing: -0.02em;
-    }
-
-    .date {
-      font-size: 1rem;
-      color: #999;
-      font-weight: 400;
-    }
+    .header { text-align: center; margin-bottom: 24px; }
+    .title  { font-size: 1.75rem; font-weight: 700; color: #1a1a1a; margin-bottom: 8px; letter-spacing: -0.02em; }
+    .date   { font-size: 1rem; color: #999; font-weight: 400; }
 
     .clock-container {
-      flex: 1;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      position: relative;
-      min-height: 0;
+      flex: 1; display: flex; justify-content: center; align-items: center;
+      position: relative; min-height: 0;
     }
 
     .clock {
-      position: relative;
-      border-radius: 50%;
-      background: transparent; /* 🔹 시계판 배경 투명 */
+      position: relative; border-radius: 50%;
+      background: transparent;          /* 원판은 투명(배경은 .card가 담당) */
     }
 
-    /* 큰 숫자 */
-    .clock-number {
-      position: absolute;
-      font-weight: 700;
-      color: #1a1a1a;
-      transform: translate(-50%, -50%);
-      user-select: none;
-      pointer-events: none;
+    /* 숫자 */
+    .clock-number, .minor-number {
+      position: absolute; transform: translate(-50%, -50%);
+      user-select: none; pointer-events: none; color: #1a1a1a;
     }
+    .clock-number { font-weight: 700; }
+    .minor-number { font-weight: 500; color: #333; }
 
-    /* 작은 숫자 */
-    .minor-number {
-      position: absolute;
-      font-weight: 500;
-      color: #333;
-      transform: translate(-50%, -50%);
-      user-select: none;
-      pointer-events: none;
-    }
-
-    /* 중심점 */
+    /* 중심점: 파란 내부 + 흰 테두리, 맨 앞 */
     .clock-center {
-      position: absolute;
-      top: 50%;
-      left: 50%;
-      background: #000cfe;
-      border: 4px solid #ffffff;
-      border-radius: 50%;
-      transform: translate(-50%, -50%);
-      z-index: 999;
-      box-shadow: 0 0 0 1px rgba(0,0,0,0.1);
+      position: absolute; top: 50%; left: 50%;
+      background: #000cfe; border: 4px solid #ffffff;
+      border-radius: 50%; transform: translate(-50%, -50%);
+      z-index: 999; box-shadow: 0 0 0 1px rgba(0,0,0,0.1);
     }
 
-    /* 바늘 공통 */
+    /* 바늘 */
     .hand {
-      position: absolute;
-      top: 50%;
-      left: 50%;
-      transform-origin: 50% 100%;
-      border-radius: 999px;
-      z-index: 10;
+      position: absolute; top: 50%; left: 50%;
+      transform-origin: 50% 100%; border-radius: 999px; z-index: 10;
     }
-
-    .hour-hand   { background: #1a1a1a; z-index: 12; }
-    .minute-hand { background: #1a1a1a; z-index: 13; }
-    .second-hand { background: #000cfe; z-index: 11; }
+    .hour-hand   { background: #1a1a1a; z-index: 12; } /* 블랙 */
+    .minute-hand { background: #1a1a1a; z-index: 13; } /* 블랙(짧게) */
+    .second-hand { background: #000cfe; z-index: 11; } /* 블루 */
   </style>
 </head>
 <body>
   <div class="widget">
-    <div class="header">
-      <div class="title">Time</div>
-      <div class="date" id="todayDate"></div>
-    </div>
+    <div class="card">
+      <div class="header">
+        <div class="title">Time</div>
+        <div class="date" id="todayDate"></div>
+      </div>
 
-    <div class="clock-container" id="clockContainer">
-      <div class="clock" id="clock">
-        <div class="clock-number number-12" id="num12">12</div>
-        <div class="clock-number number-3"  id="num3">3</div>
-        <div class="clock-number number-6"  id="num6">6</div>
-        <div class="clock-number number-9"  id="num9">9</div>
+      <div class="clock-container" id="clockContainer">
+        <div class="clock" id="clock">
+          <div class="clock-number" id="num12">12</div>
+          <div class="clock-number" id="num3">3</div>
+          <div class="clock-number" id="num6">6</div>
+          <div class="clock-number" id="num9">9</div>
 
-        <div class="hand hour-hand"   id="hourHand"></div>
-        <div class="hand minute-hand" id="minuteHand"></div>
-        <div class="hand second-hand" id="secondHand"></div>
+          <div class="hand hour-hand"   id="hourHand"></div>
+          <div class="hand minute-hand" id="minuteHand"></div>
+          <div class="hand second-hand" id="secondHand"></div>
 
-        <div class="clock-center" id="clockCenter"></div>
+          <div class="clock-center" id="clockCenter"></div>
+        </div>
       </div>
     </div>
   </div>
@@ -155,30 +119,25 @@
     function updateClock() {
       const now = new Date();
       const koreaTime = new Date(now.toLocaleString("en-US", { timeZone: "Asia/Seoul" }));
-
       const h = koreaTime.getHours() % 12;
       const m = koreaTime.getMinutes();
       const s = koreaTime.getSeconds();
 
-      const hourAngle = h * 30 + m * 0.5;
-      const minuteAngle = m * 6;
-      const secondAngle = s * 6;
-
-      setHand(document.getElementById('hourHand'), hourAngle);
-      setHand(document.getElementById('minuteHand'), minuteAngle);
-      setHand(document.getElementById('secondHand'), secondAngle);
+      setHand(document.getElementById('hourHand'),   h * 30 + m * 0.5);
+      setHand(document.getElementById('minuteHand'), m * 6);
+      setHand(document.getElementById('secondHand'), s * 6);
     }
 
     function layoutClock() {
       const container = document.getElementById('clockContainer');
-      const clock      = document.getElementById('clock');
-      const centerDot  = document.getElementById('clockCenter');
+      const clock = document.getElementById('clock');
+      const centerDot = document.getElementById('clockCenter');
 
       const size = Math.min(container.clientWidth, container.clientHeight);
       const diameter = Math.max(160, Math.floor(size * 0.9));
-      const radius   = diameter / 2;
+      const radius = diameter / 2;
 
-      clock.style.width  = `${diameter}px`;
+      clock.style.width = `${diameter}px`;
       clock.style.height = `${diameter}px`;
 
       const largeFont = Math.round(diameter * 0.10);
@@ -189,19 +148,17 @@
       const n6  = document.getElementById('num6');
       const n9  = document.getElementById('num9');
 
-      [n12,n3,n6,n9].forEach(el => el.style.fontSize = `${largeFont}px`);
+      [n12, n3, n6, n9].forEach(el => el.style.fontSize = `${largeFont}px`);
+      n12.style.left = `${radius}px`;               n12.style.top  = `${numOffset}px`;
+      n3.style.left  = `${diameter - numOffset}px`; n3.style.top   = `${radius}px`;
+      n6.style.left  = `${radius}px`;               n6.style.top   = `${diameter - numOffset}px`;
+      n9.style.left  = `${numOffset}px`;            n9.style.top   = `${radius}px`;
 
-      n12.style.left = `${radius}px`;   n12.style.top  = `${numOffset}px`;
-      n3.style.left  = `${diameter - numOffset}px`; n3.style.top  = `${radius}px`;
-      n6.style.left  = `${radius}px`;   n6.style.top  = `${diameter - numOffset}px`;
-      n9.style.left  = `${numOffset}px`; n9.style.top  = `${radius}px`;
-
-      const existing = clock.querySelectorAll('.minor-number');
-      existing.forEach(e => e.remove());
+      // 작은 숫자 생성/갱신
+      clock.querySelectorAll('.minor-number').forEach(e => e.remove());
       const minorNums = [1,2,4,5,7,8,10,11];
       const minorFont = Math.round(diameter * 0.06);
       const minorRadius = radius - Math.max(18, Math.floor(diameter * 0.14));
-
       minorNums.forEach(n => {
         const angle = (n * 30) * Math.PI / 180;
         const x = radius + minorRadius * Math.sin(angle);
@@ -215,11 +172,13 @@
         clock.appendChild(el);
       });
 
+      // 중심 원
       const dot = Math.round(diameter * 0.09);
       centerDot.style.width  = `${dot}px`;
       centerDot.style.height = `${dot}px`;
       centerDot.style.borderWidth = `${Math.max(3, Math.round(diameter * 0.02))}px`;
 
+      // 바늘 길이/두께 (분침 더 짧게)
       const hour   = document.getElementById('hourHand');
       const minute = document.getElementById('minuteHand');
       const second = document.getElementById('secondHand');
@@ -232,9 +191,9 @@
       minute.style.height = `${minuteLen}px`;
       second.style.height = `${secondLen}px`;
 
-      const hourW   = Math.max(8,  Math.round(diameter * 0.05));
-      const minuteW = Math.max(6,  Math.round(diameter * 0.04));
-      const secondW = Math.max(3,  Math.round(diameter * 0.02));
+      const hourW   = Math.max(8, Math.round(diameter * 0.05));
+      const minuteW = Math.max(6, Math.round(diameter * 0.04));
+      const secondW = Math.max(3, Math.round(diameter * 0.02));
 
       hour.style.width   = `${hourW}px`;
       minute.style.width = `${minuteW}px`;
@@ -244,11 +203,10 @@
     updateDate();
     layoutClock();
     updateClock();
-
     setInterval(updateClock, 1000);
 
     const ro = new ResizeObserver(() => layoutClock());
-    ro.observe(document.getElementById('clockContainer'));
+    ro.observe(document.querySelector('.card'));
     window.addEventListener('orientationchange', layoutClock);
   </script>
 </body>
