--- a/index.html
+++ b/index.html
@@ -5,51 +5,49 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Time Widget</title>
   <style>
-    :root { --widget-height: 500px; }
+    :root { --clock-d: 200px; } /* ✅ 시계 원 지름(세로길이 미세조정용) */
 
     * { box-sizing: border-box; }
     body {
       margin: 0;
       padding: 20px;
-      font-family: sans-serif;         /* 🔹 저작권 문제 없는 기본 서체 */
+      font-family: sans-serif;         /* 저작권 안전 */
       background: transparent;
       display: flex; justify-content: center; align-items: center;
       min-height: 100vh;
     }
 
-    /* 바깥 위젯: 배경 투명, 테두리/그림자 유지 */
+    /* 바깥: 투명 배경 + 테두리/그림자 (할 일 위젯과 동일) */
     .widget {
-      background: transparent;         /* 🔹 투명 */
+      background: transparent;
       border-radius: 32px;
-      padding: 0;                       /* 카드가 내부 패딩을 담당 */
+      padding: 0;                      /* 내부 카드가 패딩 담당 */
       box-shadow: 0 8px 32px rgba(0,0,0,0.06);
-      width: 100%; max-width: 500px;
+      width: 100%;
+      max-width: 500px;
       border: 1px solid rgba(0,0,0,0.04);
-      height: var(--widget-height);
-      display: flex; align-items: stretch;
     }
 
-    /* 안쪽 카드: 흰색 배경 (다크모드에서도 시계가 또렷) */
+    /* 안쪽 카드: 흰 배경(다크모드에서도 또렷) */
     .card {
-      background: #ffffff;              /* 🔹 내부는 항상 흰색 */
+      background: #fff;
       border-radius: 32px;
-      padding: 32px 28px;
-      width: 100%; height: 100%;
+      padding: 32px 28px;              /* ✅ 동일 패딩 */
+      width: 100%;
       display: flex; flex-direction: column;
     }
 
-    .header { text-align: center; margin-bottom: 24px; }
+    .header { text-align: center; margin-bottom: 32px; } /* ✅ 동일 여백 */
     .title  { font-size: 1.75rem; font-weight: 700; color: #1a1a1a; margin-bottom: 8px; letter-spacing: -0.02em; }
     .date   { font-size: 1rem; color: #999; font-weight: 400; }
 
-    .clock-container {
-      flex: 1; display: flex; justify-content: center; align-items: center;
-      position: relative; min-height: 0;
-    }
-
     .clock {
-      position: relative; border-radius: 50%;
-      background: transparent;          /* 원판은 투명(배경은 .card가 담당) */
+      position: relative;
+      width: var(--clock-d);
+      height: var(--clock-d);
+      margin: 0 auto;                  /* 가운데 정렬 */
+      border-radius: 50%;
+      background: transparent;         /* 원판 자체는 투명 (배경은 카드가 담당) */
     }
 
     /* 숫자 */
@@ -57,25 +55,27 @@
       position: absolute; transform: translate(-50%, -50%);
       user-select: none; pointer-events: none; color: #1a1a1a;
     }
-    .clock-number { font-weight: 700; }
-    .minor-number { font-weight: 500; color: #333; }
+    .clock-number { font-weight: 700; font-size: 1.15rem; }
+    .minor-number { font-weight: 500; font-size: .8rem; color: #333; }
 
-    /* 중심점: 파란 내부 + 흰 테두리, 맨 앞 */
+    /* 중심점 */
     .clock-center {
       position: absolute; top: 50%; left: 50%;
-      background: #000cfe; border: 4px solid #ffffff;
-      border-radius: 50%; transform: translate(-50%, -50%);
-      z-index: 999; box-shadow: 0 0 0 1px rgba(0,0,0,0.1);
+      width: 18px; height: 18px; background: #000cfe;
+      border: 4px solid #fff; border-radius: 50%;
+      transform: translate(-50%, -50%); z-index: 999;
+      box-shadow: 0 0 0 1px rgba(0,0,0,0.1);
     }
 
     /* 바늘 */
     .hand {
       position: absolute; top: 50%; left: 50%;
-      transform-origin: 50% 100%; border-radius: 999px; z-index: 10;
+      transform-origin: 50% 100%;
+      border-radius: 999px; z-index: 10;
     }
-    .hour-hand   { background: #1a1a1a; z-index: 12; } /* 블랙 */
-    .minute-hand { background: #1a1a1a; z-index: 13; } /* 블랙(짧게) */
-    .second-hand { background: #000cfe; z-index: 11; } /* 블루 */
+    .hour-hand   { width: 10px; height: calc(var(--clock-d) * 0.31); background: #1a1a1a; z-index: 12; }
+    .minute-hand { width: 8px;  height: calc(var(--clock-d) * 0.27); background: #1a1a1a; z-index: 13; } /* 분침 짧게 */
+    .second-hand { width: 4px;  height: calc(var(--clock-d) * 0.35); background: #000cfe; z-index: 11; }
   </style>
 </head>
 <body>
@@ -86,128 +86,81 @@
         <div class="date" id="todayDate"></div>
       </div>
 
-      <div class="clock-container" id="clockContainer">
-        <div class="clock" id="clock">
-          <div class="clock-number" id="num12">12</div>
-          <div class="clock-number" id="num3">3</div>
-          <div class="clock-number" id="num6">6</div>
-          <div class="clock-number" id="num9">9</div>
+      <div class="clock" id="clock">
+        <!-- 큰 숫자 -->
+        <div class="clock-number" id="num12">12</div>
+        <div class="clock-number" id="num3">3</div>
+        <div class="clock-number" id="num6">6</div>
+        <div class="clock-number" id="num9">9</div>
 
-          <div class="hand hour-hand"   id="hourHand"></div>
-          <div class="hand minute-hand" id="minuteHand"></div>
-          <div class="hand second-hand" id="secondHand"></div>
+        <!-- 바늘 -->
+        <div class="hand hour-hand"   id="hourHand"></div>
+        <div class="hand minute-hand" id="minuteHand"></div>
+        <div class="hand second-hand" id="secondHand"></div>
 
-          <div class="clock-center" id="clockCenter"></div>
-        </div>
+        <!-- 중심점 -->
+        <div class="clock-center"></div>
       </div>
     </div>
   </div>
 
   <script>
+    // 날짜(한국)
     function updateDate() {
-      const today = new Date();
-      const koreaTime = new Date(today.toLocaleString("en-US", { timeZone: "Asia/Seoul" }));
-      document.getElementById('todayDate').innerText = koreaTime.toLocaleDateString('en-US', {
+      const now = new Date();
+      const kr = new Date(now.toLocaleString('en-US', { timeZone: 'Asia/Seoul' }));
+      document.getElementById('todayDate').innerText = kr.toLocaleDateString('en-US', {
         year: 'numeric', month: 'long', day: 'numeric', timeZone: 'Asia/Seoul'
       });
     }
 
-    function setHand(el, deg) {
-      el.style.transform = `translate(-50%, -100%) rotate(${deg}deg)`;
-    }
+    // 바늘 회전
+    const setHand = (el, deg) => el.style.transform = `translate(-50%, -100%) rotate(${deg}deg)`;
 
     function updateClock() {
       const now = new Date();
-      const koreaTime = new Date(now.toLocaleString("en-US", { timeZone: "Asia/Seoul" }));
-      const h = koreaTime.getHours() % 12;
-      const m = koreaTime.getMinutes();
-      const s = koreaTime.getSeconds();
-
+      const kr = new Date(now.toLocaleString('en-US', { timeZone: 'Asia/Seoul' }));
+      const h = kr.getHours() % 12, m = kr.getMinutes(), s = kr.getSeconds();
       setHand(document.getElementById('hourHand'),   h * 30 + m * 0.5);
       setHand(document.getElementById('minuteHand'), m * 6);
       setHand(document.getElementById('secondHand'), s * 6);
     }
 
-    function layoutClock() {
-      const container = document.getElementById('clockContainer');
+    // 숫자 배치(고정 지름 기준)
+    function placeNumbers() {
+      const d = parseFloat(getComputedStyle(document.documentElement).getPropertyValue('--clock-d'));
+      const r = d / 2;
+      const numOffset = Math.round(d * 0.11);
       const clock = document.getElementById('clock');
-      const centerDot = document.getElementById('clockCenter');
 
-      const size = Math.min(container.clientWidth, container.clientHeight);
-      const diameter = Math.max(160, Math.floor(size * 0.9));
-      const radius = diameter / 2;
+      // 큰 숫자 위치
+      const setPos = (el, x, y) => { el.style.left = x + 'px'; el.style.top = y + 'px'; };
+      setPos(num12, r, numOffset);
+      setPos(num3,  d - numOffset, r);
+      setPos(num6,  r, d - numOffset);
+      setPos(num9,  numOffset, r);
 
-      clock.style.width = `${diameter}px`;
-      clock.style.height = `${diameter}px`;
-
-      const largeFont = Math.round(diameter * 0.10);
-      const numOffset = Math.round(diameter * 0.11);
-
-      const n12 = document.getElementById('num12');
-      const n3  = document.getElementById('num3');
-      const n6  = document.getElementById('num6');
-      const n9  = document.getElementById('num9');
-
-      [n12, n3, n6, n9].forEach(el => el.style.fontSize = `${largeFont}px`);
-      n12.style.left = `${radius}px`;               n12.style.top  = `${numOffset}px`;
-      n3.style.left  = `${diameter - numOffset}px`; n3.style.top   = `${radius}px`;
-      n6.style.left  = `${radius}px`;               n6.style.top   = `${diameter - numOffset}px`;
-      n9.style.left  = `${numOffset}px`;            n9.style.top   = `${radius}px`;
-
-      // 작은 숫자 생성/갱신
+      // 작은 숫자
       clock.querySelectorAll('.minor-number').forEach(e => e.remove());
-      const minorNums = [1,2,4,5,7,8,10,11];
-      const minorFont = Math.round(diameter * 0.06);
-      const minorRadius = radius - Math.max(18, Math.floor(diameter * 0.14));
-      minorNums.forEach(n => {
-        const angle = (n * 30) * Math.PI / 180;
-        const x = radius + minorRadius * Math.sin(angle);
-        const y = radius - minorRadius * Math.cos(angle);
+      [1,2,4,5,7,8,10,11].forEach(n => {
+        const angle = n * 30 * Math.PI/180;
+        const minorRadius = r - Math.max(18, Math.floor(d * 0.14));
+        const x = r + minorRadius * Math.sin(angle);
+        const y = r - minorRadius * Math.cos(angle);
         const el = document.createElement('div');
         el.className = 'minor-number';
-        el.style.fontSize = `${minorFont}px`;
+        el.textContent = n;
         el.style.left = x + 'px';
         el.style.top  = y + 'px';
-        el.textContent = n;
         clock.appendChild(el);
       });
-
-      // 중심 원
-      const dot = Math.round(diameter * 0.09);
-      centerDot.style.width  = `${dot}px`;
-      centerDot.style.height = `${dot}px`;
-      centerDot.style.borderWidth = `${Math.max(3, Math.round(diameter * 0.02))}px`;
-
-      // 바늘 길이/두께 (분침 더 짧게)
-      const hour   = document.getElementById('hourHand');
-      const minute = document.getElementById('minuteHand');
-      const second = document.getElementById('secondHand');
-
-      const hourLen   = Math.round(radius * 0.62);
-      const minuteLen = Math.round(radius * 0.55);
-      const secondLen = Math.round(radius * 0.70);
-
-      hour.style.height   = `${hourLen}px`;
-      minute.style.height = `${minuteLen}px`;
-      second.style.height = `${secondLen}px`;
-
-      const hourW   = Math.max(8, Math.round(diameter * 0.05));
-      const minuteW = Math.max(6, Math.round(diameter * 0.04));
-      const secondW = Math.max(3, Math.round(diameter * 0.02));
-
-      hour.style.width   = `${hourW}px`;
-      minute.style.width = `${minuteW}px`;
-      second.style.width = `${secondW}px`;
     }
 
+    // 초기화
     updateDate();
-    layoutClock();
+    placeNumbers();
     updateClock();
     setInterval(updateClock, 1000);
-
-    const ro = new ResizeObserver(() => layoutClock());
-    ro.observe(document.querySelector('.card'));
-    window.addEventListener('orientationchange', layoutClock);
   </script>
 </body>
 </html>
